--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
+<h2>
+  Welcome to another Algorithm Sorting Visualizer
+</h2>
 <p>
-  Welcome to yet another Algorithm Sorting Visualizer
+  This website will contain visualizations of various algorithms and other
+  things I find interesting during the course of my degree in IT. I am making
+  this site for both personal benefit in practice of web development and also in
+  the hopes that maybe it might be amusing to others too.
 </p>
