--- a/client/src/app/pages/sort/sort.component.css
+++ b/client/src/app/pages/sort/sort.component.css
@@ -12,18 +12,9 @@
 }
 
 .item {
-  border: 1px solid blue;
-  background: blue;
+  border: 1px solid #3f51b5;
   width: 100%;
   margin: 0 0.5px;
-}
-
-.item .current {
-  background: red;
-}
-
-.item .comparing {
-  background: pink;
 }
 
 button {
