--- a/client/src/app/pages/sort/sort.component.html
+++ b/client/src/app/pages/sort/sort.component.html
@@ -30,11 +30,7 @@
     <button mat-raised-button color="primary" (click)="mergeSort()">
       Merge Sort
     </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="loadAlgorithm('QuickSort')"
-    >
+    <button mat-raised-button color="primary" (click)="quickSort()">
       Quick Sort
     </button>
   </mat-list-item>
