cleaned up controls and animation, v1 complete
nb: bug with mergesort but good enough for now

--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,9 +1,15 @@
 <h2>
-  Welcome to another Algorithm Sorting Visualizer
+  Welcome to DC Algorithm Sorting Visualizer
 </h2>
 <p>
-  This website will contain visualizations of various algorithms and other
-  things I find interesting during the course of my degree in IT. I am making
-  this site for both personal benefit in practice of web development and also in
-  the hopes that maybe it might be amusing to others too.
+  This website will contain visualizations of various algorithms and other side
+  projects related to my university subjects. I am making this site for both
+  practice and deepening my understanding of content. Furthermore, in the hopes
+  that maybe it might be amusing to others too.
 </p>
+<h2 class="social-links">
+  <a target="_blank" href="https://github.com/domainance"
+    ><i class="fab fa-github"></i
+  ></a>
+  <a href="https://codepen.io/domainance"><i class="fab fa-codepen"></i></a>
+</h2>
