--- a/client/src/app/main-nav/main-nav.component.html
+++ b/client/src/app/main-nav/main-nav.component.html
@@ -12,6 +12,7 @@
       <a mat-list-item routerLink="">Home</a>
       <a mat-list-item routerLink="sort">Sorting Algorithms</a>
       <a mat-list-item routerLink="search">Search Algorithms</a>
+      <a mat-list-item disabled>Cryptography</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
