--- a/client/src/app/pages/sort/sort.component.html
+++ b/client/src/app/pages/sort/sort.component.html
@@ -1,74 +1,55 @@
-<p>
-  Choose an algorithm and watch it sort an array with duplicate values. Generate
-  arrays of different sizes and change the sorting speed.
-</p>
-<p>
-  The current element being sorted is green and the elements being compared to
-  are pink.
-</p>
-<div>
-  <p>{{ this.selectedAlgorithmName }} Selected</p>
+<mat-form-field appearance="fill">
+  <mat-label>Select an algorithm</mat-label>
+  <mat-select [(value)]="selectedAlgorithmName" required>
+    <mat-option value="SelectionSort">Selection Sort</mat-option>
+    <mat-option value="InsertionSort">Insertion Sort</mat-option>
+    <mat-option value="MergeSort">Merge Sort</mat-option>
+    <mat-option value="QuickSort">Quick Sort</mat-option>
+  </mat-select>
+</mat-form-field>
+<div class="wrap">
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="sortInProgress"
+    (click)="sort()"
+  >
+    Start Sort
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    (click)="generateRandomArray()"
+    [disabled]="sortInProgress"
+  >
+    Generate New Array
+  </button>
+
+  <div class="control-container">
+    <p>Array Length</p>
+    <mat-slider
+      min="1"
+      max="100"
+      step="1"
+      tickInterval="20"
+      thumbLabel
+      [(value)]="arrayLength"
+    ></mat-slider>
+  </div>
+  <div class="control-container">
+    <p>Sorting Speed</p>
+    <mat-slider
+      min="1"
+      max="100"
+      step="1"
+      tickInterval="20"
+      thumbLabel
+      [(value)]="sortSpeed"
+    ></mat-slider>
+  </div>
 </div>
-<div [ngSwitch]></div>
-<mat-list class="horizontal-list">
-  <mat-list-item>
-    <p>Algorithms:</p>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="loadAlgorithm('SelectionSort')"
-    >
-      Selection Sort
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="loadAlgorithm('InsertionSort')"
-    >
-      Insertion Sort
-    </button>
-    <button mat-raised-button color="primary" (click)="mergeSort()">
-      Merge Sort
-    </button>
-    <button mat-raised-button color="primary" (click)="quickSort()">
-      Quick Sort
-    </button>
-  </mat-list-item>
-  <mat-list-item>
-    <p>Controls:</p>
-    <button mat-raised-button color="primary" (click)="sort()">
-      Start Sort
-    </button>
-    <button mat-raised-button color="primary" (click)="generateRandomArray()">
-      Generate New Array
-    </button>
 
-    <div class="control-container">
-      <p>Array Length</p>
-      <mat-slider
-        min="1"
-        max="100"
-        step="1"
-        tickInterval="20"
-        thumbLabel
-        [(value)]="arrayLength"
-      ></mat-slider>
-    </div>
-    <div class="control-container">
-      <p>Sorting Speed</p>
-      <mat-slider
-        min="1"
-        max="100"
-        step="1"
-        tickInterval="20"
-        thumbLabel
-        [(value)]="sortSpeed"
-      ></mat-slider>
-    </div>
-  </mat-list-item>
-</mat-list>
-
-<div class="">
+<div class="array-container">
   <ul class="array">
     <li
       class="item"
