--- a/client-v1/src/app/pages/search/search.component.html
+++ b/client-v1/src/app/pages/search/search.component.html
@@ -1,3 +1,14 @@
-<p>
-  To be done: DFS/BFS Pathfinding, Binary Search Visualization
-</p>
+<div class="container">
+  <p>
+    To be done: DFS/BFS Pathfinding, Binary Search Visualization
+  </p>
+  <div class="grid-container">
+    <div *ngFor="let rows of numRows" class="row">
+      <div *ngFor="let cols of numCols" class="col">
+        <div class="node">
+          <app-node></app-node>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
