added pathfinding grid

--- a/client-v1/src/app/main-nav/main-nav.component.html
+++ b/client-v1/src/app/main-nav/main-nav.component.html
@@ -12,7 +12,7 @@
       <a mat-list-item routerLink="">Home</a>
       <a mat-list-item routerLink="sort">Sorting Algorithms</a>
       <a mat-list-item routerLink="search">Search Algorithms</a>
-      <a mat-list-item disabled>Cryptography</a>
+      <a mat-list-item routerLink="crypto">Cryptography</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
