--- a/client-v1/src/app/pages/search/search.component.scss
+++ b/client-v1/src/app/pages/search/search.component.scss
@@ -3,7 +3,6 @@
 }
 
 .grid-container {
-  display: inline-block;
   height: 100%;
   width: 100%;
   border: 1px solid black;
@@ -11,12 +10,12 @@
 
 .row {
   display: flex;
+  max-height: 16px;
   margin: 0;
   padding: 0;
 }
 
 .col {
-  display: inline-block;
   margin: 0;
   padding: 0;
 }
